--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http:
-  flutter_flushbar:
-  shared_preferences:
 
+  google_nav_bar: ^5.0.6
+  http:
+  shared_preferences:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
